Added parameters to read and write methods

--- a/test/cypher_queries.yaml
+++ b/test/cypher_queries.yaml
@@ -4,8 +4,7 @@ pre_ingest:
   - CREATE CONSTRAINT nkMovie IF NOT EXISTS FOR(n:Movie) REQUIRE (n.movieId) IS NODE KEY;
 
 queries:
-  load_person:
-      |
+  load_person: |
       WITH $rows AS rows
       UNWIND rows AS row
       MERGE(p:Person {personId:row.personId})
@@ -13,8 +12,7 @@ queries:
           SET p.personId=row.personId,
               p.name=row.name,
               p.birthYear=toInteger(row.birthYear)
-  load_movie:
-      |
+  load_movie: |
       WITH $rows AS rows
       UNWIND rows AS row
       MERGE(m:Movie {movieId:row.movieId})
@@ -24,11 +22,16 @@ queries:
               m.averageVote=toFloat(row.avgVote),
               m.releaseYear=toInteger(row.releaseYear),
               m.genres=split(row.genres,':')
-  load_role:
-      |
+  load_role: |
       WITH $rows AS rows
       UNWIND rows AS row
       MATCH(p:Person {personId:row.personId}),(m:Movie {movieId:row.movieId})
       MERGE(p)-[r:ACTED_IN]->(m)
         ON CREATE
         SET r.character=split(row.character,':')
+  create_actor: |
+      MERGE(p:Person:Actor {personId:$id})
+        ON CREATE
+          SET p.personId=$id,
+              p.name=$name,
+              p.birthYear=$year
