--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyneoinstance"
-version = "1.1.1"
-description = "Handle Neo4j read and write transactions"
+version = "2.0.0"
+description = "Handle Neo4j read and write transactions and provide methos for performing graph EDA"
 readme = "README.md"
 authors = [{ name = "Jose A. Alvarado-Guzman",email = "jose.alvarado-guzman@neo4j.com" }]
 license = { file = "LICENSE" }
@@ -20,6 +20,7 @@ keywords = ["neo4j", "graph", "cypher"]
 dependencies = [
     "neo4j>=5.0.0",
     "pandas",
-    "PyYAML"
+    "PyYAML",
+    "pyvis>=0.3.2"
 ]
 requires-python = ">=3.8"
